<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".SingUpBirthDayActivity">

    <include layout="@layout/appbarlayout" />


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:fontFamily="@font/regular"
                android:text="@string/lbl_hey_sabrina_calvo_when_s_your_birthday"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:padding="5dp"
                android:text="@string/lbl_we_need_this_to_sure_you_re_over_18"
                android:textSize="16sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TableRow>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:padding="10dp"
                        android:text="@string/lbl_day"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:padding="10dp"
                        android:text="@string/lbl_month"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:padding="10dp"
                        android:text="@string/lbl_year"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:text="@string/lbl__"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:text="@string/lbl__"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1"

                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:text="@string/lbl_____"
                        android:textSize="16sp" />

                </TableRow>
            </TableLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btncon1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/purple"
            android:elevation="0dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:text="@string/lbl_continue"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:cornerRadius="0dp" />


    </com.google.android.material.card.MaterialCardView>

</androidx.appcompat.widget.LinearLayoutCompat>



