<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/side_nav_bar"
        android:orientation="vertical">

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="-40dp"
        android:background="@drawable/item_image_background"
        android:backgroundTint="@color/white"
        android:padding="3dp"
        android:src="@drawable/profileimage" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sfprobold"
        android:text="@string/lbl_katharina_mazepa"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/regular"
        android:text="@string/lbl_kathmazepa"
        android:textColor="@color/text"
        android:textSize="16sp" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="8dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/sfprobold"
                android:text="@string/lbl_866"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:text="@string/lbl_groups"
                android:textAllCaps="true"
                android:textColor="@color/menuitemcolor"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/view"
            android:padding="20dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="8dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:fontFamily="@font/sfprobold"
                android:text="@string/lbl_123k"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/lbl_followers"
                android:textAllCaps="true"
                android:textColor="@color/menuitemcolor"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/view"
            android:padding="20dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="8dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/sfprobold"
                android:text="@string/lbl_880"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/lbl_following"
                android:textAllCaps="true"
                android:textColor="@color/menuitemcolor"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>