<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.CreateGroupFragment">

    <include layout="@layout/appbarlayoutp" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="0dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/profile" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/regular"
                        android:padding="20dp"
                        android:text="Upload group avtar"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/lbl_group_name"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/item_border_rounded"
                    android:fontFamily="@font/regular"
                    android:hint="@string/lbl_enter_your_name"
                    android:padding="15dp"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/lbl_interests"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edthobby"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/item_border_rounded"
                    android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
                    android:drawableTint="@color/drawble"
                    android:focusable="false"
                    android:hint="@string/lbl_select_your_group_interests"
                    android:imeOptions="actionNext"
                    android:padding="15dp"
                    tools:targetApi="m" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/regular"
                    android:paddingStart="20dp"
                    android:text="@string/lbl_descriptions"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="100dp"

                    android:layout_marginTop="10dp"

                    android:background="@drawable/item_border_rounded"
                    android:drawableTint="@color/drawble"
                    android:gravity="top"
                    android:hint="@string/lbl_enter_your_word_here"
                    android:imeOptions="actionNext"
                    android:maxLength="40"
                    android:padding="15dp"
                    android:scrollbars="vertical"
                    tools:targetApi="m" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="20dp"
                    android:padding="5dp"
                    android:text="@string/lbl_0_40"
                    android:textColor="@color/text"
                    android:textSize="12sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </ScrollView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/creategrp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/purple"
            android:elevation="0dp"
            android:imeOptions="actionGo"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:text="@string/lbl_create_group"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="0dp" />


    </com.google.android.material.card.MaterialCardView>


</androidx.appcompat.widget.LinearLayoutCompat>
