<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".SingUpPassword">

    <include layout="@layout/appbarlayout" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/regular"
                android:text="@string/lbl_almost_there_just_set_a_password"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/item_border_rounded"
                android:hint="@string/lbl_enter_your_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="12"
                android:maxLines="1"
                android:paddingStart="15dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/item_border_rounded"
                android:hint="@string/lbl_enter_your_confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="12"
                android:maxLines="1"
                android:paddingStart="15dp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btngo"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/purple"
            android:imeOptions="actionGo"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:text="@string/lbl_let_s_go"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="-0dp" />
    </com.google.android.material.card.MaterialCardView>

</androidx.appcompat.widget.LinearLayoutCompat>